src/stylus/_globals.styl
/*************\
*   Colors
*************/
$color-primary = #2d132c
$color-primary-hover = #4A2E49

$color-secondary = #c72c41
$color-bg = #715670
$color-bg-light = #b79eb6
$color-black = #160104
$color-white = #dbdbdb
$color-gray = #615960
$color-gray-light = #a79da6
/*************\
*   Fonts
*************/
$font-normal = "Open Sans", sans-serif
$font-titles = "Roboto", sans-serif
$font-size-h1 = 2.8rem
$font-size-h2 = 2.4rem
$font-size-h3 = 2rem
$font-size-p = 1.4rem
$font-size-small = 1.2rem
/*************\
*   Box sizes
*************/
$padding = 20px
$max-width-mobile = 360px
$border-radius = 10px
$box-margin = 10px

html
  font-size: 62.5%
  scroll-behavior smooth

body
  font-family: $font-normal
  background-color $color-secondary

h1,h2,h3
  font-family $font-titles
h1
  font-size $font-size-h1
  letter-spacing .01em
h2
  font-size $font-size-h2
  letter-spacing .015em

h3
  letter-spacing .015em
  font-size $font-size-h3
p
  font-size $font-size-p
  letter-spacing .015em
small
  font-size $font-size-small
  letter-spacing .015em
ul,
body,
li,
figure
  margin: 0
  padding: 0

ul
  list-style none

a
  text-decoration: none
  color: inherit
input
  border none
p
  line-height 1.5rem

[data-prefix="fas"], [data-prefix="fab"]
  color $color-white
  // font-size 2.5rem

button
 background none
 border none
 appearance none
 padding 0
 
.img
 width 100%
 height 100%

.section-title
  margin-top 0

.button
  display flex
  justify-content center
  align-items center
  width 100%
  height 40px
  background-color $color-primary
  color $color-white
  border-radius $border-radius
  font-size $font-size-p
  letter-spacing .1em
  // font-family $font-titles
  font-weight thin
  text-transform capitalize
  cursor pointer
  &:hover
    background-color $color-primary-hover

.container
  max-width $max-width-mobile
  margin 0 auto
  padding $padding
  width 100%
  @media(min-width: 1240px)
    max-width 1100px
  // @media(min-width: 1920px)
  //   max-width 1100px
.social-media
  height 3rem
  margin auto 0
  display flex

